syntax = "proto3";
option go_package = "./proto";
package proto;

service FileService {
  rpc UploadImage (stream UploadImageRequest) returns (stream UploadImageResponse) {}
  rpc DownloadImage (DownloadImageRequest) returns (stream DownloadImageResponse) {}
}

message DownloadImageRequest {
  int64 message_id = 1;
}

message DownloadImageResponse {
  bytes image_bytes = 1;
  double progress = 2;
  bool success = 3;
  string message = 4;
}

message UploadImageRequest {
  bytes image_bytes = 1;
  string message = 2;
  int64 chat_id = 3;
  string file_extension = 4;
  float image_size = 5;
}

message UploadImageResponse {
  bool success = 1;
  double progress = 2;
  string base64EncodedBlur = 3;
}